# maestral-qt

./: .bumpversion-cross-dependencies.cfg  .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  README.md  build.sh  post_build.py  pyinstaller_macos.spec  pyproject.toml  setup.cfg  setup.py  snapcraft.yaml
.github/workflows/: pythonpublish.yml
maestral_qt/: __init__.py  __main__.py  activity_window.py  autostart.py  cli.py  dropbox_location_dialog.py  folders_dialog.py  main.py  rebuild_index_dialog.py  relink_dialog.py  selective_sync_dialog.py  settings_window.py  setup_dialog.py  sync_issues_window.py  utils.py  widgets.py
maestral_qt/resources/: __init__.py  folders_dialog.ui  maestral.desktop  rebuild_index_dialog.ui  relink_dialog.ui  selective_sync_dialog.ui  settings_window.ui  setup_dialog.ui  sync_event_widget.ui  sync_issue_widget.ui  sync_issues_window.ui  unlink_dialog.ui
maestral_qt/resources/app_icon_svg/: app_icon.ai
package/: maestral_linux.spec  maestral_macos.spec
src/maestral_qt/: __init__.py  __main__.py  activity_window.py  autostart.py  bandwidth_dialog.py  dropbox_location_dialog.py  main.py  relink_dialog.py  selective_sync_dialog.py  settings_window.py  setup_dialog.py  sync_issues_window.py  utils.py  widgets.py
src/maestral_qt/__pyinstaller/: hook-maestral_qt.py
src/maestral_qt/resources/: __init__.py  bandwidth_dialog.ui  dropbox_location_dialog.ui  maestral.desktop  relink_dialog.ui  selective_sync_dialog.ui  settings_window.ui  setup_dialog.ui  sync_event_widget.ui  sync_issues_window.ui  (+11 more)
