[metadata]
name = maestral-qt
version = 1.9.2
author = Sam Schott
author_email = sam.schott@outlook.com
license = MIT
description = A Qt GUI for the Maestral daemon
url = https://maestral.app
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
package_dir =
    = src
zip_safe = False
setup_requires = wheel
install_requires =
    click>=7.1.1
    maestral>=1.9.2
    markdown2
    packaging
    PyQt6
python_requires = >=3.7

[options.packages.find]
where = src

[options.package_data]
maestral_qt =
    resources/*.icns
    resources/*.png
    resources/*.svg
    resources/*.desktop
    resources/file

[options.data_files]
share/applications =
	src/maestral_qt/resources/maestral.desktop

[options.entry_points]
console_scripts = maestral_qt=maestral_qt.__main__:main
maestral_gui = maestral_qt=maestral_qt.main:run
pyinstaller40 =
    hook-dirs=maestral_qt.__pyinstaller:get_hook_dirs
